<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />
        <variable
            name="viewmodel"
            type="pl.students.szczepieniaapp.presentation.ui.viewmodel.SearchPatientViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/searchPatientFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:gravity="center_horizontal"
            android:text="@string/search_patient_fragment_search_title_text"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:iconifiedByDefault="false"
            android:queryHint="@string/search_patient_fragment_search_hint_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:theme="@style/AppSearchView" />

        <ProgressBar
            android:id="@+id/searchPatientProgressBar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/searchView" />

        <LinearLayout
            android:id="@+id/patientDataLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/background"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchView">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:id="@+id/patientDetailsTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_patient_fragment_patient_data_text"
                    android:textSize="18dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/patientNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/search_patient_fragment_patient_text" />

            <TextView
                android:id="@+id/patientPeselTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/search_patient_fragment_patient_pesel_text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/registerVaccinationLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/background"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/patientDataLinearLayout">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:id="@+id/registerVaccinationTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/search_patient_fragment_register_vaccination_text"
                    android:textSize="18dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/vaccineTypeTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/search_patient_fragment_select_vaccine_type_text" />

                    <TextView
                        android:id="@+id/vaccineDoseTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/search_patient_fragment_select_vaccine_dose_text" />

                    <TextView
                        android:id="@+id/vaccineIdNumberTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/search_patient_fragment_lot_number_text" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="20dp">

                    <RelativeLayout
                        android:id="@+id/selectVaccineRelativeLayout"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="3dp"
                        android:background="@drawable/spinner_border"
                        android:orientation="horizontal"
                        android:paddingStart="5dp">

                        <Spinner
                            android:id="@+id/selectVaccineTypeSpinner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:layout_marginLeft="5dp"
                            android:background="@android:color/transparent"
                            android:gravity="center"
                            android:popupBackground="@drawable/spinner_popup_border"
                            android:spinnerMode="dropdown" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_baseline_keyboard_arrow_down_24" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/selectVaccineDoseRelativeLayout"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/selectVaccineRelativeLayout"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/spinner_border"
                        android:orientation="horizontal"
                        android:paddingStart="5dp">

                        <Spinner
                            android:id="@+id/selectVaccineDoseSpinner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:layout_marginLeft="5dp"
                            android:background="@android:color/transparent"
                            android:gravity="center"
                            android:popupBackground="@drawable/spinner_popup_border"
                            android:spinnerMode="dropdown" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_baseline_keyboard_arrow_down_24" />

                    </RelativeLayout>

                    <EditText
                        android:id="@+id/vaccineIdNumberEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/selectVaccineDoseRelativeLayout"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="4dp"
                        android:hint="@string/search_patient_fragment_lot_number_hint_text"
                        android:inputType="textPersonName"
                        android:text="@={viewmodel.lotNumber}"
                        android:textSize="10sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/noPatientLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/background"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchView">

            <TextView
                android:id="@+id/noPatientWarningTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/search_patient_fragment_no_patient_warning_text"
                android:textSize="16dp"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/registerVaccinationBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:onClick="@{viewmodel::registerVaccination}"
            android:text="@string/search_patient_fragment_register_vaccination_btn_text"
            android:textSize="10dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerVaccinationLinearLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>