...
    <string name="search_patient_fragment_register_vaccination_text">Register vaccination</string>
    <string name="search_patient_fragment_select_vaccine_type_text">Select vaccine type:</string>
    <string name="search_patient_fragment_select_vaccine_dose_text">Select vaccine dose:</string>
    <string name="search_patient_fragment_lot_number_text">Add lot number:</string>
    <string name="search_patient_fragment_lot_number_hint_text">Add vaccine lot here...</string>
    <string name="search_patient_fragment_vaccination_register_data_not_complete_text">Please, provide all data needed to register vaccination!</string>
    <string name="search_patient_fragment_vaccination_is_being_registered_text">Vaccination is being registered...</string>
    <string name="search_patient_fragment_vaccination_registered_text">Vaccination successfully registered!</string>
    <string name="search_patient_fragment_select_vaccine_registered_text">Select vaccine:</string>
    <string name="search_patient_fragment_select_dose_registered_text">Select dose:</string>
    <!--    Search Patient Fragment strings end here-->

    <!--    Doctor Fragment strings-->
...
